cmake_minimum_required(VERSION 3.2)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PATCH 0)
if(DEFINED ENV{TRAVIS_BUILD_NUMBER})
  set(PATCH $ENV{TRAVIS_BUILD_NUMBER})
endif()

enable_testing()

project(nickname VERSION 0.0.${PATCH})

add_executable(${PROJECT_NAME}
   nickname.h
   main.cpp)

set_target_properties(${PROJECT_NAME} PROPERTIES
  COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
  INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER sanblch)

include(CPack)

add_subdirectory(test)
